UIDevTools: Update protocol and handling code

UI DevTools have been out of sync with platform DevTools protocol.
This will cause some runtime errors due to protocol incompatibility.
This CL updates UI Devtools' protocol and corresponding handling
code.

For protocol update, we update the domain fields and its properties
according to browser_protocol.pdl. We also arrange the order to
put the name or id at the first, and use consistent order across
different fields to make it more readable and easier for future
updates.

BUG=894623

Change-Id: Ic650c126155044d2e25c4ff068c5a7a17144584f
Reviewed-on: https://chromium-review.googlesource.com/c/1277835
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Commit-Queue: Wei Li <weili@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599686}
Former-commit-id: a7ff68ad4694f996e543b68eb001994fd7ea4471