components/ui_devtools/overlay_agent.cc
@@ -28,7 +28,6 @@ protocol::Response OverlayAgent::highlightNode(
 }
 
 protocol::Response OverlayAgent::hideHighlight() {
-  NOTREACHED();
   return protocol::Response::OK();
 }
 
